      - debian-watch-file-specifies-wrong-upstream-version
      - debian-watch-file-specifies-old-upstream-version
      - extended-description-is-probably-too-short
      - shlib-without-versioned-soname

  * checks/description{,.desc}:
    + [RA] Check for extended descriptions shorter than three lines; they
      probably don't contain enough information.  Patch from Raphael
      Geissert.
  * checks/nmu:
    + [RA] Recognize Ubuntu native packages by the target distribution and
      suppress NMU tags for them.  Based on a patch by Adrien Cunin.
      (Closes: #507740)
  * checks/shared-libs{,.desc}:
    + [RA] Remove special shlibs exception for NSS modules.  libc6 now
      includes shlibs entries for them.
    + [RA] Report a more specialized tag for shared libraries with SONAMEs
      that have no version and exclude them from the shlibs file tests
      since they cannot be represented there.  Reported by Raphael
      Hertzog.  (Closes: #506673)
    + [RA] Use the same regexes as dpkg-shlibdeps when parsing version
      information from SONAMEs.
  * checks/version-substvars:
    + [RA] Skip version substvar checks when the dependency is on a
      package whose name is formed by expanding substvars at build time.
      Thanks, Bastian Blank.  (Closes: #507763)
  * checks/watch-file{,.desc}:
    + [RA] Merge a set of changes by Raphael Geissert:
      - Correctly parse multiple line continuations.
      - Don't attempt any detailed checks on version one watch files.
      - Recognize versionmangle in addition to [du]versionmangle.
      - Add line information to some of the tags.
      - Detect watch files that specify SourceForge download servers
        directly and suggest use of the QA sf.net redirector instead.
      - Detect watch files specifying an upstream version that matches a
        non-native Debian package version in debian/changelog.
      - Detect watch files specifying an upstream version for an older